--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Jun 19 11:11:18 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xend_internal.c: drop the release information as this
+	  is usually garbage ending up polluting minor and major numbers.
+	* src/virsh.c: applied patch from Masayuki Sunou providing a pair
+	  of alternate attach/detach commands
+
 Mon Jun 18 16:59:00 BST 2007 Richard W.M. Jones  <rjones@redhat.com>
 
 	* docs/libvir.html (Remote): Updated certificate documentation
