--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jun 19 15:42:26 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* docs/site.xsl docs/libvirt.html docs/uri.html docs/*.html:
+	  adding a placeholder for the new URIs page, update the 
+	  stylesheet to generate a new page, rebuilt.
+
 Tue Jun 19 13:12:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* docs/remote.html: Check in the updated documentation file
