--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jun 21 09:38:12 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* docs/virsh.pod: commit of original POD file for virsh man page
+	  from Andrew Puch April 2006
+
 Wed Jun 20 18:23:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/libvirt.c, src/qemu_internal.c, src/test.c,
