--- a/docs/virsh.pod
+++ b/docs/virsh.pod
@@ -91,25 +91,17 @@ list the values supported but the most commons are:
 
 =over 4
 
-=item xen///
+=item xen:///
 
 this is used to connect to the local Xen hypervisor, this is the default
 
 =item qemu:///system
 
-allow to connect locally as root to the daemon supervizing QEmu domains
+allow to connect locally as root to the daemon supervizing QEmu and KVM domains
 
 =item qemu:///session
 
-allow to connect locally as a normal user to the his own set of QEmu domain 
-
-=item kvm:///system
-
-allow to connect locally as root to the daemon supervizing KVM domains
-
-=item kvm:///session
-
-allow to connect locally as a normal user to the his own set of KVM domain 
+allow to connect locally as a normal user to the his own set of QEmu and KVM domains
 
 =back
 
@@ -202,11 +194,11 @@ I<domain-id> can be specified as an short integer, a name or a full UUID.
 
 =over 4
 
-=item B<autostart> optional I<----disable> I<domain-id>
+=item B<autostart> optional I<--disable> I<domain-id>
 
 Configure a domain to be automatically started at boot.
 
-The option I<----disable> disable autostarting.
+The option I<--disable> disable autostarting.
 
 =item B<console> I<domain-id>
 
