--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jun 22 12:14:40 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* qemud/driver.c: apply patch from Jim Meyering to handle realloc
+	  failure without leaking.
+
 Thu Jun 21 16:56:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* docs/virsh.pod: Fixed a few typos and POD directives.
