--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Jun 26 14:52:00 EST 2007 Daniel P. Berrange <berrange@rdhat.com>
+
+	* qemud/event.c, qemud/event.h, qemud/Makefile.am: Generic
+	standalone event loop implementation for monitoring file
+	handles & timers.
+	* qemud/qemud.c, qemud/internal.h: Adapt to use the generic
+	event loop
+
 Tue Jun 26 14:40:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/remote_internal.c, python/Makefile.am: Python bindings
