Move process lifecycle code from qemud.c to driver.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,16 @@
-Tue Jun 26 15:11:00 EST 2007 Daniel P. Berrange <berrange@rdhat.com>
+Tue Jun 26 16:41:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/driver.c, qemud/driver.h, qemud/internal.h,
+	qemud/qemud.c: Move VM & network process lifecycle management
+	out of qemud.c and into the main driver.c
+
+Tue Jun 26 15:11:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/dispatch.c, qemud/driver.c, qemud/driver.h: Move
 	code for generating capabilities XML into driver.c file
 	alongside other driver APIs
 
-Tue Jun 26 14:52:00 EST 2007 Daniel P. Berrange <berrange@rdhat.com>
+Tue Jun 26 14:52:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/event.c, qemud/event.h, qemud/Makefile.am: Generic
 	standalone event loop implementation for monitoring file
