--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Jun 26 18:10:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/conf.c, qemud/conf.h, qemud/dispatch.c, qemud/driver.c,
+	qemud/driver.h, qemud/internal.h, qemud/qemud.c: Split the
+	struct qemud_server into two parts, moving QEMU stuff out into
+	struct qemud_driver. Move all QEMU related data structures
+	and manipulation code into conf.c file
+
 Tue Jun 26 16:50:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/Makefile.am, qemud/conf.c, qemud/dispatch.c, qemud/driver.c,
