--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Fri Jun 29 15:18:36 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* docs/apibuild.py docs/newapi.xsl: fix generation of XML and
+	  stylesheet
+	* docs/*: regenerated
+	* src/bridge.c src/bridge.h src/buf.c src/iptables.c src/libvirt.c
+	  src/qemu_driver.c src/qemu_driver.h src/uuid.c src/uuid.h: cleanup,
+	  addd comments, made functions static and fixe a few bugs
+
 Tue Jun 29 13:44:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* docs/site.xsl, docs/libvir.html, docs/hvsupport.html:
