--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul  5 09:46:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/remote_internal.c: Fixed typo in setting flags for network
+	opening.
+
 Wed Jul  4 14:17:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/xm_internal.c: configCache not getting refilled if the
