--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul  6 17:06:52 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: fix an error in the default help string, bug #247197
+
 Fri Jul  6 16:00:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/hash.c, src/internal.h: Remove virGetDomainByID function
