--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Jul  6 17:50:00 EST 2007 Daniel P.Berrange <berrange@redhat.com>
+
+	* src/qemu_driver.c: Use virFreeDomain and virFreeNetwork
+	instead of free(), to ensure the objects are removed from
+	the cache
+
 Fri Jul  6 16:19:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/libvirt.c, src/qemu_driver.c: If the virNetworkLookup*
